# Para

./: .gitignore  Cargo.toml  README.md
flamegraph/: outana_v1
release/: .env  words.txt
src/: main.rs
